--- a/src/pages/Splash/Splash.css
+++ b/src/pages/Splash/Splash.css
@@ -169,5 +169,6 @@
 @media screen and (max-width: 600px) {
     .Splash {
         width: 100vw;
+        margin-top: -10rem;
     }
 }
